@@ -28,14 +28,14 @@ public class CredentialsValidator implements Validator {
         String userName = credentials.getUserName().trim();
         String password = credentials.getPassword().trim();
 
-        if (userName.isBlank())
+        if (userName.trim().isEmpty())
             errors.rejectValue("userName", "required");
         else if (userName.length() < MIN_USERNAME_LENGTH || userName.length() > MAX_USERNAME_LENGTH)
             errors.rejectValue("userName", "size");
         else if (this.credentialsService.getCredentials(userName) != null)
             errors.rejectValue("userName", "duplicate");
 
-        if (password.isBlank())
+        if (password.trim().isEmpty())
             errors.rejectValue("password", "required");
         else if (password.length() < MIN_PASSWORD_LENGTH || password.length() > MAX_PASSWORD_LENGTH)
             errors.rejectValue("password", "size");
